admin/src/style/main.scss
//my overrides
@import "./overides/overides";


// my components styles
@import "./components/include";



.main-content{
    width: 100vw;
    display: grid;
    grid-template-columns: 1fr 6fr;
    .logged-user{
        padding: 15px;
        background-color: Secondary(1);
        font-weight: 200;
        color: Bright(1 );
        margin: 30px 0px;
    }

}
.modal{
    width: 100%;

}

.main{
    width: 100%;
    max-width: 1800px;
    margin: 0 auto;
    height: 100vh;
    overflow-y: scroll;
    > *{
        margin: 30px 0px
    }
    padding: 0px 30px
}

@include scrollify(".main",true);

